Use shadow instead of outline on highlighted cards to improve styling with border-radius, fix cut overflow on featured section on home page and allow to de-select topics on home page

--- a/src/app/core/home/home-page/home-page.component.scss
+++ b/src/app/core/home/home-page/home-page.component.scss
@@ -18,13 +18,13 @@
   width: 100%;
   height: min-content;
   margin: 100px 0 0 0;
-  overflow: hidden;
+  // overflow: hidden;
   display: flex;
   flex-direction: column;
   gap: 10px;
   // justify-content: center;
   @media (min-width: 1200px) {
-    height: 370px;
+    height: 390px;
     margin: 150px 0 0 0;
     flex-direction: row;
     justify-content: space-between;
